# matrix

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Matrix.h  MatrixConfigure.h.in  README.md  main.cpp  matrix.cpp
headers/: Matrix.h
include/: CMakeLists.txt  Matrix.cpp  Matrix.h  output.cpp
include/constructors/: constuctors.cpp
